--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <br>
 
 <p>
-<!--<p1><a href="https://github.com/kingsone995/Signal-and-System/blob/master/README.md">1.信号与系统</a></p1><br>
+<!--<p1><a href="https://github.com/dashuaibi-cyf/cyf/tree/main/信号与系统实践环节">1.信号与系统实践环节</a></p1><br>
 -->
-<p1><a href="https://github.com/NIT2018/NitSignal/blob/master/SUMMARY.md">1.信号与系统</a></p1><br>
+<p1><a href="https://github.com/dashuaibi-cyf/cyf/tree/main/信号与系统实践环节">1.信号与系统实践环节</a></p1><br>
